add hotel with restTemplate